@@ -1,6 +1,10 @@
 [2015-09-xx]
 Version 0.7.2 UNRELEASED
 
+- New features:
+
+  * 'Escape' key cancels input dialogs (search, limit, etc.) (Closes: #493322)
+
 - Bug fixes:
 
   * Disable strings gathered for translation (Closes: #790568)
